--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Kanban web application based on React",
     "main": "index.js",
     "scripts": {
-        "prettier": "prettier --ignore-path .gitignore --write ./"
+        "prettier": "prettier --ignore-path .gitignore --write ./",
+        "build": "webpack",
+        "dev": "webpack-dev-server --open"
     },
     "repository": {
         "type": "git",
@@ -22,9 +24,12 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "babel-loader": "^9.1.2",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.0",
         "prettier": "^2.8.3",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
     },
     "dependencies": {
         "react": "^18.2.0",
