--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@babel/core": "^7.20.12",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
         "html-loader": "^4.2.0",
@@ -31,6 +33,8 @@
         "prettier": "^2.8.3",
         "sass-loader": "^13.2.0",
         "style-loader": "^3.3.1",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.4",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1"
