--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "description": "Kanban web application based on React",
     "main": "index.js",
     "scripts": {
-        "prettier": "prettier --ignore-path .gitignore --write ./",
         "build": "webpack",
-        "dev": "webpack-dev-server --open"
+        "dev": "webpack-dev-server --open",
+        "prettier": "prettier --ignore-path .gitignore --write ./",
+        "lint": "eslint --ignore-path .gitignore 'src/**/{*.js,*.jsx,*.ts,*.tsx}'"
     },
     "repository": {
         "type": "git",
@@ -25,8 +26,12 @@
         "@babel/preset-react": "^7.18.6",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
+        "eslint": "^8.22.0",
+        "eslint-plugin-react": "^7.32.1",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
         "node-sass": "^8.0.0",
