--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "webpack",
         "dev": "webpack-dev-server --open",
         "prettier": "prettier --ignore-path .gitignore --write ./",
-        "lint": "eslint --ignore-path .gitignore 'src/**/{*.js,*.jsx,*.ts,*.tsx}'"
+        "lint": "eslint --ignore-path .gitignore 'src/**/{*.js,*.jsx,*.ts,*.tsx}'",
+        "test": "jest --verbose"
     },
     "repository": {
         "type": "git",
@@ -24,16 +25,26 @@
         "@babel/core": "^7.20.12",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.2.6",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/testing-library__jest-dom": "^5.14.5",
+        "@types/testing-library__react": "^10.2.0",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
         "@typescript-eslint/parser": "^5.49.0",
+        "babel-jest": "^29.4.0",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
         "eslint": "^8.22.0",
         "eslint-plugin-react": "^7.32.1",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.4.0",
+        "jest-environment-jsdom": "^29.4.0",
         "node-sass": "^8.0.0",
         "prettier": "^2.8.3",
         "sass-loader": "^13.2.0",
