--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es6",
         "module": "commonjs",
         "allowJs": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "outDir": "./dist",
         "rootDir": "./",
         "isolatedModules": true,
@@ -15,5 +15,6 @@
         "esModuleInterop": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "types": ["node", "jest", "@testing-library/jest-dom"]
 }
